--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "sequelize": "4.41.2",
     "mysql2": "1.6.4",
     "koa-router": "7.4.0",
-    "koa-bodyparser": "4.2.1"
+    "koa-bodyparser": "4.2.1",
+    "koa-validate": "1.0.7",
+    "koa-logger": "3.2.0"
   },
   "license": "Apache-2.0",
   "bugs": {
