--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "koa-router": "7.4.0",
     "koa-bodyparser": "4.2.1",
     "koa-validate": "1.0.7",
-    "koa-logger": "3.2.0"
+    "koa-logger": "3.2.0",
+    "jsonwebtoken": "8.4.0"
   },
   "license": "Apache-2.0",
   "bugs": {
