--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "koa-bodyparser": "4.2.1",
     "koa-validate": "1.0.7",
     "koa-logger": "3.2.0",
-    "jsonwebtoken": "8.4.0"
+    "jsonwebtoken": "8.4.0",
+    "node-schedule": "1.3.1"
   },
   "license": "Apache-2.0",
   "bugs": {
